--- a/app/templates/basic_common/mybase.html
+++ b/app/templates/basic_common/mybase.html
@@ -1,2 +1,43 @@
 {% extends 'bootstrap/base.html' %}
-{% block title %}Mollusk{% endblock title %}
+{% block html_attribs %} lang='zh-CN' {% endblock html_attribs %}
+{% block title %}Mollusk{% endblock title %}  # 网页名
+{% block meta %}
+    {{ super() }}
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+{% endblock meta %}
+{% block styles %}
+    {{ super() }}
+    <!-- Main Stylesheet File -->
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+{% endblock styles %}
+
+{% block navbar %}
+    <!-- Fixed navbar -->
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        <a class="pull-left" href="#">
+            <img class="img-responsive" src="{{ url_for('static', filename='image/logo3.png') }}"
+        </a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="index.html">首页</a></li>
+          <li><a href="services.html">服务</a></li>
+          <li><a href="works.html">业务</a></li>
+          <li><a href="about.html">关于</a></li>
+          <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
+    </div>
+  </div>
+{% endblock navbar %}
