--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,41 @@
 {% extends 'basic_common/mybase.html' %}
 {% import 'basic_common/_macros.html' as macros %}
+
 {% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <img src="{{ url_for('static', filename='image/top.jpg') }}">
+    {{ super() }}
+    <div id="headerwrap">
+        <div class="container">
+            <div class="row centered">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>贝类遗传育种分析评估系统</h2>
+                </div>
             </div>
         </div>
     </div>
+    <!-- headerwrap -->
+      <div class="container w">
+        <div class="row centered">
+          <br><br>
+          <div class="col-lg-4">
+            <i class="fa fa-heart"></i>
+            <h4>DESIGN</h4>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+          </div>
+          <div class="col-lg-4">
+            <i class="fa fa-laptop"></i>
+            <h4>BOOTSTRAP</h4>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+          </div>
+          <!-- col-lg-4 -->
+          <div class="col-lg-4">
+            <i class="fa fa-trophy"></i>
+            <h4>SUPPORT</h4>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+          </div>
+          <!-- col-lg-4 -->
+        </div>
+        <!-- row -->
+        <br>
+        <br>
+      </div>
 {% endblock body %}
