--- a/app/templates/basic_common/mybase.html
+++ b/app/templates/basic_common/mybase.html
@@ -12,6 +12,7 @@
     {{ super() }}
     <!-- Main Stylesheet File -->
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
 {% endblock styles %}
 {% block head %}
     {{ super() }}
@@ -20,28 +21,48 @@
 {% endblock head %}
 {% block navbar %}
     <!-- Fixed navbar -->
-  <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        <a class="pull-left" href="#">
-            <img class="img-responsive" src="{{ url_for('static', filename='image/logo3.png') }}">
-        </a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="index.html">首页</a></li>
-          <li><a href="services.html">服务</a></li>
-          <li><a href="works.html">业务</a></li>
-          <li><a href="about.html">关于</a></li>
-          <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
-        </ul>
-      </div>
-      <!--/.nav-collapse -->
-    </div>
-  </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                <a class="pull-left" href="#">
+                    <img class="img-responsive" src="{{ url_for('static', filename='image/logo3.png') }}">
+                </a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{{ url_for('main.index') }}">首页</a></li>
+                    <li><a href="{{ url_for('main.works') }}">业务</a></li>
+                    <li><a href="{{ url_for('main.about') }}">关于</a></li>
+                    <li><a href="{{ url_for('auth.register') }}"><span class="glyphicon glyphicon-user"></span> 注册</a> </li>
+                    {% if current_user.is_authenticated %}
+                        <li><a href=" {{ url_for('auth.logout') }}"><span class="glyphicon glyphicon-log-out"></span> 退出</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('auth.login') }}"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
+                    {% endif %}
+                    <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
+                </ul>
+            </div>
+          <!--/.nav-collapse -->
+        </div>
+    </nav>
 {% endblock navbar %}
+{% block scripts %}
+    {{ super() }}
+    <script type="text/javascript">
+       $(function () {
+          $(".navbar-nav").find("li").each(function () {
+            var a = $(this).find("a:first")[0];
+            if ($(a).attr("href") === location.pathname) {
+              $(this).addClass("active");
+            } else {
+              $(this).removeClass("active");
+            }
+          });
+        })
+    </script>
+{% endblock %}
