--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,7 +10,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-offset-3 col-md-6">
-                    <form class="form-horizontal">
+                    <form method="post" class="form-horizontal">
+                        {{ form.csrf_token }}
                         <span class="heading">用户登录</span>
                         <div class="form-group">
                             <i class="fa fa-user"></i>
@@ -35,29 +36,3 @@
         </div>
     </div>
 {% endblock content %}
-
-{#{% block content %}#}
-{#    <div class="row">#}
-{#        <div class="col-md-offset-3 col-md-6">#}
-{#            <form class="form-horizontal" id="login_form">#}
-{#                <span class="h3">请登录</span>#}
-{#                <div class="form-group">#}
-{#                    {{ form.email(class="form-control", id="inputEmail", placeholder="用户名或电子邮箱") }}#}
-{#                    <i class="fa fa-user"></i>#}
-{#                </div>#}
-{#                <div class="form-group help">#}
-{#                    {{ form.password(class="form-control", id="inputPassword", placeholder="请输入密码") }}#}
-{#                    <i class="fa fa-lock"></i>#}
-{#                    <a href="#" class="fa fa-question-circle"></a>#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                    <div class="col-lg-6">#}
-{#                        {{ form.remember_me() }}#}
-{#                    </div>#}
-{#                    <span class="text-left">记住我</span>#}
-{#                    {{ form.submit(class='btn') }}#}
-{#                </div>#}
-{#            </form>#}
-{#        </div>#}
-{#    </div>#}
-{#{% endblock content %}#}
